draggable bug & overflow

--- a/src/components/Dialog/Dialog.less
+++ b/src/components/Dialog/Dialog.less
@@ -2,9 +2,13 @@
     &.cm-dialog{
       background: #fff;
       position: absolute;
-      top: 50%;
-      left: 50%;
+      top: 0;
+      left: 0;
       z-index: 40000;
       min-width: 300px;
+      transform: translate(-50%, -50%);
+      -webkit-transform: translate(-50%, -50%);
+      -moz-transform: translate(-50%, -50%);
+      -ms-transform: translate(-50%, -50%);
     }
 }
